--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,9 @@ jobs:
         run: flutter pub get
 
       - name: Build Flutter Web
-        run: flutter build web --release
+        run: |
+          REPO_NAME=$(basename $GITHUB_REPOSITORY)
+          flutter build web --release --base-href="/$REPO_NAME/"
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
