--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,11 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.29.0'
+          channel: stable
+          flutter-version-file: pubspec.yaml
+      - run: |
+          flutter --version
+          flutter doctor -v
 
       - name: Install dependencies
         run: flutter pub get
@@ -53,7 +57,12 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.29.0'
+          channel: stable
+          flutter-version-file: pubspec.yaml
+      - run: |
+          flutter --version
+          flutter doctor -v
+      
 
       - name: Install dependencies
         run: flutter pub get
