Modify pubspec.yaml to include versions with no breaking changes and also auto modify README.md during version release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
           path: windows-release-${{ github.ref_name }}.7z
 
   release:
-    name: Publish GitHub Release
+    name: Publish GitHub Release and Modify README.md
     needs: [build-linux, build-windows]
     runs-on: ubuntu-latest
     steps:
@@ -99,3 +99,24 @@ jobs:
             artifacts/windows-artifacts/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up environment variables
+        run: |
+          echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
+          echo "ENCODED_VERSION=$(echo "${GITHUB_REF##*/}" | sed 's/+/%2B/g')" >> $GITHUB_ENV
+
+      - name: Set up Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Replace version placeholders in README.md
+        run: |
+          sed -i "s/{{VERSION}}/$VERSION/g" README.md
+          sed -i "s/{{ENCODED_VERSION}}/$ENCODED_VERSION/g" README.md
+
+      - name: Commit and push README update
+        run: |
+          git add README.md
+          git commit -m "Update README with release version $VERSION"
+          git push origin HEAD
