--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,6 +100,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # Modify version placeholders in README.md
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: main  # or your default branch
+
       - name: Set up environment variables
         run: |
           echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
